// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#counterColor snapshot should match negation value 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "red",
        "fontSize": 30,
        "fontWeight": "bold",
      }
    }
  >
    -1
  </Text>
</View>
`;

exports[`#counterColor snapshot should match positive value 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "green",
        "fontSize": 30,
        "fontWeight": "normal",
      }
    }
  >
    2
  </Text>
</View>
`;

exports[`#counterColor snapshot should turn the color from red to green if change state value 1`] = `
Object {
  "color": "red",
  "fontSize": 30,
  "fontWeight": "bold",
}
`;

exports[`#counterColor snapshot should turn the color from red to green if change state value 2`] = `
Object {
  "color": "green",
  "fontSize": 30,
  "fontWeight": "normal",
}
`;
